--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,14 @@
         tools:targetApi="31">
         <activity
             android:name=".ListeDesFormationsAcitivty"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_liste_des_formations_acitivty"
-            android:theme="@style/Theme.SubAlligator" />
-        <activity
-            android:name=".SubAlligator"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.SubAlligator">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
     </application>
 
