--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
     implementation 'androidx.annotation:annotation:1.4.0'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
