--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SubAlligator"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:launchMode="standard">
         <activity
             android:name=".LoginScreen"
             android:exported="true">
