--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,12 @@
         android:theme="@style/Theme.SubAlligator"
         tools:targetApi="31">
         <activity
-            android:name=".LoginScreen"
+            android:name=".activity.SeanceByFormationScreen"
+            android:exported="false"
+            android:label="@string/title_activity_seance_by_formation_screen"
+            android:theme="@style/Theme.SubAlligator" />
+        <activity
+            android:name=".activity.LoginScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListeDesFormationsAcitivty"
+            android:name=".activity.ListeDesFormationsAcitivty"
             android:exported="true"
             android:label="@string/title_activity_liste_des_formations_acitivty"
             android:theme="@style/Theme.SubAlligator">
