--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
         android:theme="@style/Theme.SubAlligator"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ContentScreen"
+            android:exported="false"
+            android:label="@string/title_activity_content_screen"
+            android:theme="@style/Theme.SubAlligator" />
+        <activity
+            android:name=".activity.EvaluationScreen"
+            android:exported="false"
+            android:label="@string/title_activity_evaluation"
+            android:theme="@style/Theme.SubAlligator" />
+        <activity
             android:name=".activity.SeanceByFormationScreen"
             android:exported="false"
             android:label="@string/title_activity_seance_by_formation_screen"
